# tokocrypto-cli

./: .gitignore  .npmignore  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  package.json
.github/workflows/: pages.yml  release.yml  test.yml
docs/: index.html
gate/: Cargo.toml
gate/src/: gate.rs  lib.rs  rest.rs  types.rs  ws.rs
gate/tests/: gate_tests.rs
scripts/: e2e_test.sh  install.js  release.sh
src/: auth.rs  client.rs  config.rs  errors.rs  integration.rs  lib.rs  main.rs
src/commands/: account.rs  auth.rs  funding.rs  market.rs  mod.rs  paper.rs  trade.rs  utility.rs  websocket.rs
src/mcp/: mod.rs  registry.rs  schema.rs  server.rs
src/output/: json.rs  mod.rs  table.rs
