[package]
name = "tokocrypto-cli"
version = "0.1.0"
edition = "2021"
description = "Unofficial command-line interface for the Tokocrypto exchange"
license = "MIT"

[[bin]]
name = "tokocrypto"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
rust_decimal = "1"
rust_decimal_macros = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["sink"] }
flate2 = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
comfy-table = "7"
colored = "3"
rustyline = "15"
dialoguer = "0.11"
indicatif = "0.17"
shlex = "1"
rmcp = { version = "1.1", default-features = false, features = ["server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
