[package]
name = "tokocrypto-gate"
version = "0.1.0"
edition = "2021"
description = "Gate SDK implementation for Tokocrypto"

[dependencies]
tokocrypto-cli = { path = ".." }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", features = ["sink"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
